<resources>
    <string name="app_name">OpenCARWINGS</string>
    <string name="telematics_sms" translatable="false">NISSAN_EVIT_TELEMATICS_CENTER</string>
    <string name="whats_new_content">
        <![CDATA[<ul>
            <li>You can now choose desired temperature, when remotely starting A/C</li>
            <li>Added Charging Interruption message, when AC power is interrupted</li>
            <li>Manual override for Units</li>
        </ul>]]>
    </string>
    <string name="fragment_login">Sign In</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="label_server">Server</string>
    <string name="prompt_custom_server_url">Custom Server URL</string>
    <string name="invalid_server">Invalid server option</string>
    <string name="invalid_server_url">Invalid server address</string>
    <string name="invalid_creds">Invalid credentials</string>
    <string name="server_unavailable">Server is unavailable. Please try again later.</string>
    <string name="internal_app_error">Internal app error</string>
    <string name="empty">EMPTY</string>
    <string name="full">FULL</string>
    <string name="no_selected_car">You don\'t have any cars under your account</string>
    <string name="close">Close</string>
    <string name="unknown">Unknown</string>
    <string name="charging">Charging</string>
    <string name="charging_estimation">Charging, ~%1$s left</string>
    <string name="plugged_in">Plugged In</string>
    <string name="running">Running (Parked)</string>
    <string name="parked">Parked</string>
    <string name="quick_charging">Quick Charging</string>
    <string name="battery_cap">Battery capacity: %s</string>
    <string name="capacity_bars">Capacity bars: %s</string>
    <string name="tcu_software">TCU Software: %s</string>
    <string name="driving">Driving</string>
    <string name="start_charging">Start charging</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="ac_on_confirm_dialog_title">Start A/C</string>
    <string name="ac_off_confirm_dialog_title">Stop A/C</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="ev_info">EV Info</string>
    <string name="location">Location</string>
    <string name="tcu_settings">TCU Settings</string>
    <string name="notifications">Notifications</string>
    <string name="reconnecting">Reconnecting…</string>
    <string name="connected">Connected</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="car_running">Car running</string>
    <string name="car_gear">Gear</string>
    <string name="gear_park">Park</string>
    <string name="gear_drive">Drive</string>
    <string name="gear_reverse">Reverse</string>
    <string name="charge_time_120v">Charge time (120V/L1/US)</string>
    <string name="charge_time_240v">Charge time (240V/L2/EU)</string>
    <string name="charge_time_6kW">Charge time (6.6kW)</string>
    <string name="charge_bars">Charge bars</string>
    <string name="capacity_bars_lbl">Capacity bars</string>
    <string name="soc_display">State of Charge (display)</string>
    <string name="soc_nominal">State of Charge (nominal)</string>
    <string name="soh">State of Health</string>
    <string name="remaining_charge">Remaining charge</string>
    <string name="range_acon">Estimated range (A/C on)</string>
    <string name="range_acoff">Estimated range (A/C off)</string>
    <string name="connected_to_charger">Connected to charger</string>
    <string name="is_charging">Is charging</string>
    <string name="is_qc_charging">Is Quick-charging</string>
    <string name="charging_finish">Charging finished</string>
    <string name="ac_lbl">A/C</string>
    <string name="remaining_gids">Remaining GIDs</string>
    <string name="counter_50" translatable="false">Counter</string>
    <string name="param21" translatable="false">Param 21</string>
    <string name="last_updated">Last updated</string>
    <string name="last_updated_format">Last updated: %s</string>
    <string name="ppp_item">PPP Number</string>
    <string name="apn">APN</string>
    <string name="ppp_username">PPP Username</string>
    <string name="ppp_password">PPP Password</string>
    <string name="dns1">DNS1</string>
    <string name="dns2">DNS2</string>
    <string name="server_host">Server Hostname</string>
    <string name="proxy_hostname">Proxy Hostname</string>
    <string name="connection_type">Connection type</string>
    <string name="at_home">At home</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="settings_username">Username: %s</string>
    <string name="search">Search</string>
    <string name="sharing_location_car">Sending location to car</string>
    <string name="share_complete">Location shared to the car</string>
    <string name="share_complete_msg">You can set the location as destination inside the navigation unit by going to Destination and then Google Send to Car.</string>
    <string name="link_send_fail">Could not share this location</string>
    <string name="location_default_name">Location from phone</string>
    <string name="whats_new">What\'s new?</string>
    <string name="sixKwObcExists">6.6kW OBC Exists</string>
    <string name="batteryHeaterExists">Battery heater exists</string>
    <string name="batteryHeaterActive">Battery heater active</string>
    <string name="timers">Timers</string>
    <string name="timer_log">Last run: %s, result: %s</string>
    <string name="add_new_timer">Add new timer</string>
    <string name="timer_name">Timer name</string>
    <string name="timer_enabled">Timer enabled</string>
    <string name="select_time">Select time</string>
    <string name="command">Command</string>
    <string name="timer_one_time">One-time</string>
    <string name="timer_repeating">Repeating</string>
    <string name="select_date">Select date</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="refresh_data">Refresh data</string>
    <string name="charge_start">Charge start</string>
    <string name="ac_on">A/C on</string>
    <string name="ac_off">A/C off</string>
    <string name="read_configuration">Read configuration</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="delete_timer">Delete timer</string>
    <string name="delete_timer_msg">Are you sure you want to delete this timer?</string>
    <string name="deleting_timer">Deleting timer</string>
    <string name="select_one_weekday">Select at least one day of week</string>
    <string name="update_available">Update available!</string>
    <string name="update_avail_desc">Download update from Google Play, GitHub or F-Droid</string>
    <string name="timers_active">%d timer(s) active</string>
    <string name="no_timers">No timers added</string>
    <string name="list_empty">The list is empty</string>
    <string name="select_command">Please choose a command</string>
    <string name="lock_action_label">Lock doors</string>
    <string name="climate_control">Climate Control</string>
    <string name="unlock_action_label">Unlock doors</string>
    <string name="charging_cable">AC Charging Cable</string>
    <string name="start_charging_80">Start charging to 80%</string>
    <string name="start_charging_100">Start charging to 100%</string>
    <string name="unlock">Unlock</string>
    <string name="unlock_lock_doors">Lock/Unlock Doors</string>
    <string name="lock">Lock</string>
    <string name="unlock_doors">Unlock Car</string>
    <string name="lock_doors">Lock Car</string>
    <string name="horn_light_action_label"><![CDATA[Horn & Lights]]></string>
    <string name="car_already_charging">Car already charging!</string>
    <string name="cannot_start_charging">Cannot start charging</string>
    <string name="unavailable">Unavailable</string>
    <string name="TPMS">Tire Pressure</string>
    <string name="dtc_codes">DTC Codes</string>
    <string name="tpmsReading" translatable="false">%1$s %2$s</string>
    <string name="maintenanceMileage">Mileage: %1$s</string>
    <string name="maintenanceAlert">Maintenance Alert: %1$s</string>
    <string name="dtc_ecu_id">ECU %1$s</string>
    <string name="veh_health">Vehicle Health</string>
    <string name="all_good">All good!</string>
    <string name="no_dtc_codes">No DTC Codes</string>
    <string name="otp_invalid">OTP Code Invalid</string>
    <string name="enter_otp_code">Enter 2FA Code</string>
    <string name="otp_subtitle">Enter the 6-digit code from your authenticator app</string>
    <string name="command_pin_title">Command PIN</string>
    <string name="command_pin_subtitle">Enter your 4-digit security PIN for sensitive commands</string>
    <string name="set_command_pin">Set PIN Code</string>
    <string name="set_command_pin_subtitle">4-digit PIN Code is used for sensitive commands, like door unlock</string>
    <string name="pin_label">PIN</string>
    <string name="confirm_pin_label">Confirm PIN</string>
    <string name="otp_code">2FA Code</string>
    <string name="pin_mismatch">PIN codes are not identical!</string>
    <string name="failure">Something went wrong</string>
    <string name="cabin_temp">Cabin: %s %s</string>
    <string name="incomplete_info">Incomplete information</string>
    <string name="unit_auto">Auto</string>
    <string name="unit_imperial">Imperial</string>
    <string name="unit_metric">Metric</string>
    <string name="unit_settings">Units</string>
    <string name="app_version_format">App Version: %s</string>
    <string name="charging_interrupted">Charging Interrupted</string>
</resources>