<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.developerfromjokela.opencarwings.ui.main.timers.TimerEditFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutManager="LinearLayoutManager"
    tools:context=".ui.main.timers.TimerEditFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/commandSelectLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/command"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/CenteredTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/commandSelectLabel"
        app:layout_constraintTop_toBottomOf="@+id/timerTimeTextInputLayout">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/timerCommand"
            style="@style/CenteredAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="none"
            android:paddingTop="0dp"
            android:paddingBottom="0dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/timerNameTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/timer_name"
            android:inputType="textUri" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/timerEnabled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/timer_enabled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerNameTextInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/timerTimeTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerEnabled">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timerTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:enabled="true"
            android:focusable="false"
            android:hint="@string/select_time"
            android:inputType="time" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/timerModeTabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_one_time" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_repeating" />

    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/timerDatePicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerModeTabs">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timerDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:enabled="true"
            android:focusable="false"
            android:hint="@string/select_date"
            android:inputType="time" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/weekdayChecks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerModeTabs">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/timerMon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/monday" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/timerTue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/tuesday" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/timerWed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/wednesday" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/timerThu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/thursday" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/timerFri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/friday" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/timerSat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/saturday" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/timerSun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/sunday" />
    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>